--- a/tsconfig.seed.json
+++ b/tsconfig.seed.json
@@ -9,7 +9,7 @@
       "noEmit": true,
       "esModuleInterop": true,
       "module": "ESNext",
-      "moduleResolution": "node", // Use Node's module resolution
+      "moduleResolution": "node", 
       "resolveJsonModule": true,
       "isolatedModules": true,
       "jsx": "preserve",
