--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "prisma": "^5.20.0",
     "react": "^18",
