--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "canvas-confetti": "^1.9.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "prisma": "^5.20.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
