--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
+  "plugins": ["eslint-plugin-react-compiler"],
   "rules": {
     "@next/next/no-img-element": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "react-compiler/react-compiler": "error"
   }
 }
