--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.0.1-canary.2",
     "prisma": "^5.20.0",
     "react": "^18.2.0",
+    "react-compiler-runtime": "^19.0.0-beta-8a03594-20241020",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1"
   },
@@ -28,8 +29,10 @@
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "eslint": "^8",
     "eslint-config-next": "15.0.1-canary.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
