--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:seed": "prisma db seed",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "delete-entry": "ts-node deleteLeaderboardEntry.js"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
