--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "test": "vitest",
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
@@ -27,17 +28,22 @@
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "eslint": "^8",
     "eslint-config-next": "15.0.1-canary.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
+    "jsdom": "^25.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.3"
   },
   "prisma": {
     "seed": "ts-node --project tsconfig.seed.json prisma/seed.js"
