chore: update next react and prisma versions

--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "delete-entry": "ts-node deleteLeaderboardEntry.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^6.13.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/jsonwebtoken": "^9.0.7",
     "canvas-confetti": "^1.9.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1-canary.2",
-    "prisma": "^5.20.0",
+    "next": "15.4.6",
+    "prisma": "^6.13.0",
     "react": "^18.2.0",
     "react-compiler-runtime": "^19.0.0-beta-8a03594-20241020",
     "react-dom": "^18.2.0",
@@ -38,7 +38,7 @@
     "@types/testing-library__jest-dom": "^6.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
-    "eslint": "^8",
+    "eslint": "^9.33.0",
     "eslint-config-next": "15.0.1-canary.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "jsdom": "^25.0.1",
